src/test/ui/issue-3099-a.stderr
error[E0428]: the name `a` is defined multiple times
  --> $DIR/issue-3099-a.rs:13:1
   |
LL | enum a { b, c }
   | ------ previous definition of the type `a` here
LL | 
LL | enum a { d, e } //~ ERROR the name `a` is defined multiple times
   | ^^^^^^ `a` redefined here
   |
   = note: `a` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
